<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="GVL_Auxiliary" Id="{6c7fe825-7173-4b37-8d55-28187f2f4394}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Dewar Temperature sensor error
	Dewar_temperature_error	AT%I*: BOOL;
	// dewar pressure 0..10V Pfeiffer 
	pressure_Dewar			AT%I*: INT;
	// dewar raw temperature
	temperature_Dewar 		AT%I*: INT;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>