<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="TelescopeAuxiliary" Id="{974ce34a-6026-4bc5-b92d-99da70a09948}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM TelescopeAuxiliary
VAR
	MQTTTimer : TON := (PT:=T#5S);
	pressure_voltage:	REAL;
END_VAR
VAR_OUTPUT
	// BT9 mirror
	temperature_mirror2:	REAL;
	// BT10
	temperature_mirror1:	REAL;
	// BT11

	// dewar pressure 0..10V Pfeiffer 
	pressure_Dewar:	REAL;
	// dewar temperature PT100
	temperature_Dewar:	REAL;
	

END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[temperature_mirror2 := GVL_Telescope.temperature_mirror2 / 100.0;
temperature_mirror1 := GVL_Telescope.temperature_mirror1 / 100.0;

MQTTTimer(IN:=TRUE);
IF MQTTTimer.Q THEN // publish new payload every second

	MAIN.MQTTClient.Publish('telescope', 'dome',  'Mirror2Temperature',	LREAL_TO_FMTSTR(temperature_mirror2, 2, TRUE));
	MAIN.MQTTClient.Publish('telescope', 'dome', 'Mirror1Temperature',	LREAL_TO_FMTSTR(temperature_mirror1, 2, TRUE));
	
	MAIN.MQTTClient.Publish('telescope', 'instrument', 'DewarPressureVoltage',	LREAL_TO_FMTSTR(pressure_voltage, 3, TRUE));
	IF NOT GVL_Auxiliary.Dewar_temperature_error THEN
		MAIN.MQTTClient.Publish('telescope', 'instrument', 'DewarTemperature',	LREAL_TO_FMTSTR(temperature_Dewar, 2, TRUE));
	END_IF
	IF pressure_voltage > 0.001 THEN
		MAIN.MQTTClient.Publish('telescope', 'instrument', 'DewarPressure',	LREAL_TO_FMTSTR(pressure_Dewar, 2, TRUE));
	END_IF
	
	MQTTTimer(IN:=FALSE);

END_IF
	]]></ST>
    </Implementation>
    <LineIds Name="TelescopeAuxiliary">
      <LineId Id="6" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="53" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="99" Count="1" />
      <LineId Id="179" Count="0" />
      <LineId Id="181" Count="3" />
      <LineId Id="108" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="68" Count="1" />
      <LineId Id="41" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>